--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3",
+    "python.pythonPath": "C:\\Program Files\\Python37\\python.exe",
     "editor.formatOnSave": true,
     "editor.rulers": [
         80,
